vlib/v/checker/tests/fn_var.vv
mut f := fn(i int) byte {}
f = 4
mut p := &f
p = &[f]
f = fn(mut a []int) {}
